...
        val navigationTag: String
    }

    data object Calendar : TopLevel {
        override val route = "calendar"
        override val labelResId = R.string.navigation_calendar
        override val navigationTag = "bottom-navigation-calendar"
    }

    data object Character : TopLevel {
        override val route = "character"
        override val labelResId = R.string.navigation_character
        override val navigationTag = "bottom-navigation-character"
    }

    data object Shop : TopLevel {
        override val route = "shop"
        override val labelResId = R.string.navigation_shop
        override val navigationTag = "bottom-navigation-shop"
...
